# arfcart

./: LICENSE.txt  README.md  pyproject.toml
src/arfcart/: __about__.py  carts.py  cli.py  config.py
tests/: __init__.py
