[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arfcart"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8, <3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Arthur Pirika", email = "arfy32@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
"readchar",
"sound_lib",
]

[project.scripts]
arfcart-cli = "arfcart.cli:run"

[project.urls]
Documentation = "https://github.com/unknown/arfcart#readme"
Issues = "https://github.com/unknown/arfcart/issues"
Source = "https://github.com/unknown/arfcart"

[tool.hatch.version]
path = "src/arfcart/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/arfcart tests}"

[tool.coverage.run]
source_pkgs = ["arfcart", "tests"]
branch = true
parallel = true
omit = [
  "src/arfcart/__about__.py",
]

[tool.coverage.paths]
arfcart = ["src/arfcart", "*/arfcart/src/arfcart"]
tests = ["tests", "*/arfcart/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
