[project]
name = "arfcart"
version = "0.1.0"
description = "The cart machine"
authors = [
    {name = "Arthur Pirika", email = "arfy32@gmail.com"},
]
dependencies = [
    "readchar>=4.0.5",
    "sound-lib>=0.83",
]
requires-python = ">=3.9, <3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.scripts]
arfcart-cli = "arfcart.cli:run"
